--- a/index.html
+++ b/index.html
@@ -17,3 +17,105 @@
         }
         .header {
             width: 100%;
+            max-width: 1140px;
+            background-color: #b03a2e; /* Rojo más oscuro */
+            border-bottom: 1px solid #ddd;
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+            box-sizing: border-box;
+            color: white; /* Color del texto en el encabezado */
+        }
+        .header img {
+            height: 40px; /* Ajusta la altura del logo según sea necesario */
+            margin-right: 15px;
+            background-color: #ffffff; /* Fondo blanco para el logo */
+            padding: 5px; /* Opcional: Añade espacio entre el borde y la imagen */
+            border-radius: 3px; /* Opcional: Bordes redondeados para un efecto más suave */
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 24px;
+            color: white;
+        }
+        .header .contact-info {
+            margin-left: auto;
+            display: flex;
+            align-items: center;
+        }
+        .header .contact-info img {
+            height: 20px; /* Ajusta la altura del ícono del teléfono */
+            margin-right: 10px;
+        }
+        .header .contact-info a {
+            color: white;
+            text-decoration: none;
+            margin-left: 15px;
+        }
+        .header .contact-info a:hover {
+            text-decoration: underline;
+        }
+        .iframe-container {
+            width: 100%;
+            max-width: 600px; /* Ajusta esto si es necesario para adaptarse al nuevo tamaño del iframe */
+            height: 373.5px; /* Ajusta la altura para adaptarse al nuevo iframe */
+            border: 1px solid #ddd;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+        .footer {
+            width: 100%;
+            max-width: 1140px;
+            text-align: center;
+            padding: 10px 20px;
+            background-color: #fff;
+            border-top: 1px solid #ddd;
+            box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
+        }
+        .footer a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        .footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <img src="a.png" alt="Logo Distribuidora El Toro"> <!-- Reemplaza 'ruta/a/tu/logo.png' con la ruta correcta de tu imagen -->
+        <h1>Distribuidora El Toro - Compras</h1>
+        <div class="contact-info">
+            <img src="tele.jpg" alt="Teléfono"> <!-- Reemplaza 'ruta/a/tu/icono-telefono.png' con la ruta del ícono del teléfono -->
+            <span>Tel: (222) 227-6858</span>
+            <a href="https://www.somoseltoro.com/bolsadetrabajo.php" target="_blank">
+                <img src="bolsatrabajo.png" alt="Bolsa de Trabajo"> <!-- Reemplaza 'ruta/a/tu/icono-bolsa.png' con la ruta del ícono de la bolsa de trabajo -->
+            </a>
+        </div>
+    </div>
+    <div class="iframe-container">
+        <iframe title="Porcentaje Agotados - copia" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODFhNjRkZGItOTUzNi00NGY2LWIxMDYtM2M0ZGE0MjRlNzQwIiwidCI6ImFhODFiNGU2LTllMTMtNDUxNC1iNzkwLTY1YWUyNDZlZjExZiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+    </div>
+    <div class="footer">
+        <p><a href="https://www.somoseltoro.com" target="_blank">Visita nuestra página oficial: www.somoseltoro.com</a></p>
+    </div>
+    <!-- Mensaje para depuración -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            if (!document.querySelector("iframe").src) {
+                console.error("El src del iframe está vacío. Verifica el enlace.");
+            }
+        });
+    </script>
+</body>
+</html>
