--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="iframe-container">
-        <iframe title="Porcentaje Agotados - copia" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODFhNjRkZGItOTUzNi00NGY2LWIxMDYtM2M0ZGE0MjRlNzQwIiwidCI6ImFhODFiNGU2LTllMTMtNDUxNC1iNzkwLTY1YWUyNDZlZjExZiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+        <iframe title="Porcentaje Agotados - copia" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=6876f677-6245-4ab4-8b28-920d9d742719&autoAuth=true&ctid=aa81b4e6-9e13-4514-b790-65ae246ef11f" frameborder="0" allowFullScreen="true"></iframe>
     </div>
     <div class="footer">
         <p><a href="https://www.somoseltoro.com" target="_blank">Visita nuestra página oficial: www.somoseltoro.com</a></p>
