--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="iframe-container">
-        <<iframe title="Porcentaje Agotados - copia" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYWRkNDk5ZWItZTNiZC00ZGQ4LThmNjktNDEyZjg3ZjNhNWFjIiwidCI6ImFhODFiNGU2LTllMTMtNDUxNC1iNzkwLTY1YWUyNDZlZjExZiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>>
+        <iframe title="Porcentaje Agotados - copia" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYWRkNDk5ZWItZTNiZC00ZGQ4LThmNjktNDEyZjg3ZjNhNWFjIiwidCI6ImFhODFiNGU2LTllMTMtNDUxNC1iNzkwLTY1YWUyNDZlZjExZiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
     </div>
     <div class="footer">
         <p><a href="https://www.somoseltoro.com" target="_blank">Visita nuestra página oficial: www.somoseltoro.com</a></p>
