--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="iframe-container">
-        <iframe title="Porcentaje Agotados - copia" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYWRkNDk5ZWItZTNiZC00ZGQ4LThmNjktNDEyZjg3ZjNhNWFjIiwidCI6ImFhODFiNGU2LTllMTMtNDUxNC1iNzkwLTY1YWUyNDZlZjExZiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+        <<iframe title="Porcentaje Agotados - copia" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=daa2fcb4-9c3f-41fa-ab4a-191b6b7e4ebd&autoAuth=true&ctid=aa81b4e6-9e13-4514-b790-65ae246ef11f" frameborder="0" allowFullScreen="true"></iframe>>
     </div>
     <div class="footer">
         <p><a href="https://www.somoseltoro.com" target="_blank">Visita nuestra página oficial: www.somoseltoro.com</a></p>
