--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         }
         .iframe-container {
             width: 100%;
-            max-width: 1140px; /* Ajuste para que el iframe no se desborde */
-            height: 70vh; /* Ajuste dinámico para que el iframe ocupe el 70% de la altura de la ventana */
+            max-width: 1140px; /* Ajusta el máximo tamaño del iframe */
+            height: 541.25px; /* Ajusta la altura según la nueva especificación */
             border: 1px solid #ddd;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -93,21 +93,30 @@
 </head>
 <body>
     <div class="header">
-        <img src="a.png" alt="Logo Distribuidora El Toro">
+        <img src="a.png" alt="Logo Distribuidora El Toro"> <!-- Reemplaza 'ruta/a/tu/logo.png' con la ruta correcta de tu imagen -->
         <h1>Distribuidora El Toro - Compras</h1>
         <div class="contact-info">
-            <img src="tele.jpg" alt="Teléfono">
+            <img src="tele.jpg" alt="Teléfono"> <!-- Reemplaza 'ruta/a/tu/icono-telefono.png' con la ruta del ícono del teléfono -->
             <span>Tel: (222) 227-6858</span>
             <a href="https://www.somoseltoro.com/bolsadetrabajo.php" target="_blank">
-                <img src="bolsatrabajo.png" alt="Bolsa de Trabajo">
+                <img src="bolsatrabajo.png" alt="Bolsa de Trabajo"> <!-- Reemplaza 'ruta/a/tu/icono-bolsa.png' con la ruta del ícono de la bolsa de trabajo -->
             </a>
         </div>
     </div>
     <div class="iframe-container">
-        <iframe title="Informe Power BI" src="https://app.powerbi.com/reportEmbed?reportId=daa2fcb4-9c3f-41fa-ab4a-191b6b7e4ebd&autoAuth=true&ctid=aa81b4e6-9e13-4514-b790-65ae246ef11f" frameborder="0" allowFullScreen="true"></iframe>
+        <!-- Actualiza el iframe con el nuevo informe -->
+        <iframe title="Porcentaje Agotados - copia" src="https://app.powerbi.com/reportEmbed?reportId=daa2fcb4-9c3f-41fa-ab4a-191b6b7e4ebd&autoAuth=true&ctid=aa81b4e6-9e13-4514-b790-65ae246ef11f" frameborder="0" allowFullScreen="true"></iframe>
     </div>
     <div class="footer">
         <p><a href="https://www.somoseltoro.com" target="_blank">Visita nuestra página oficial: www.somoseltoro.com</a></p>
     </div>
+    <!-- Mensaje para depuración -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            if (!document.querySelector("iframe").src) {
+                console.error("El src del iframe está vacío. Verifica el enlace.");
+            }
+        });
+    </script>
 </body>
 </html>
