--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         }
         .iframe-container {
             width: 100%;
-            max-width: 1140px; /* Ajusta el máximo tamaño del iframe */
-            height: 541.25px; /* Ajusta la altura según la nueva especificación */
+            max-width: 600px; /* Ajusta esto si es necesario para adaptarse al nuevo tamaño del iframe */
+            height: 373.5px; /* Ajusta la altura para adaptarse al nuevo iframe */
             border: 1px solid #ddd;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -104,8 +104,7 @@
         </div>
     </div>
     <div class="iframe-container">
-        <!-- Actualiza el iframe con el nuevo informe -->
-        <iframe title="Porcentaje Agotados - copia" src="https://app.powerbi.com/reportEmbed?reportId=daa2fcb4-9c3f-41fa-ab4a-191b6b7e4ebd&autoAuth=true&ctid=aa81b4e6-9e13-4514-b790-65ae246ef11f" frameborder="0" allowFullScreen="true"></iframe>
+        <iframe title="Porcentaje Agotados - copia" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=daa2fcb4-9c3f-41fa-ab4a-191b6b7e4ebd&autoAuth=true&ctid=aa81b4e6-9e13-4514-b790-65ae246ef11f" frameborder="0" allowFullScreen="true"></iframe>
     </div>
     <div class="footer">
         <p><a href="https://www.somoseltoro.com" target="_blank">Visita nuestra página oficial: www.somoseltoro.com</a></p>
